Fix external scores in dark mode

--- a/assets/sass/_song.scss
+++ b/assets/sass/_song.scss
@@ -250,6 +250,10 @@ a.tag {
     max-width: 500px;
     height: auto;
 }
+
+body[data-dark] .external-score {
+    filter: invert(0.8);
+}
 /*! purgecss end ignore */
 
 .nosleep-caption {
